Rewrite cucumber test for decorations, and fix pipeline